# spin-trigger-sqs-poc

./: Cargo.toml  README.md  build.rs  spin-pluginify.toml  sqs.wit
.github/workflows/: build.yml
guest/: spin.toml
guest/src/: lib.rs
proto/: sqs.proto
src/: aws.rs  bus.rs  eventer.rs  executor.rs  main.rs  message.rs
